// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userReducer should return the default state if no action is specified 1`] = `
Object {
  "isAuthenticated": false,
}
`;

exports[`userReducer should update the state and REMOVE_AUTH_USER when type is REMOVE_AUTH_USER and payload is specified 1`] = `
Object {
  "isAuthenticated": false,
  "user": Object {},
}
`;

exports[`userReducer should update the state and set SET_AUTH_USER when type is SET_AUTH_USER and action is specified 1`] = `
Object {
  "isAuthenticated": true,
  "user": Object {
    "name": 500,
    "user_id": 5,
  },
}
`;

exports[`userReducer should update the state and set SIGNUP_USER when type is SIGNUP_USER and action is specified 1`] = `
Object {
  "name": 500,
  "user_id": 5,
}
`;
